<resources>
    <string name="app_name">Captumia</string>
    <string name="services_menu_header_title">Explore All Services</string>
    <string name="photographers">Photographers</string>
    <string name="makeup_artist">Makeup artist</string>
    <string name="fashion">Fashion</string>
    <string name="accessories">Accessories</string>
    <string name="places">Places</string>
    <string name="retry">Retry</string>
    <string name="welcome">Welcome to Captumia</string>
    <string name="welcome_text">Are you ready to capture your valuable moments?! Let\'s explore.</string>
    <string name="search">Search</string>
    <string name="search_edit_home_hint">What are you looking for?</string>
    <string name="no_results">Perhaps try revising your search by expanding your search radius or create a listing instead!</string>
    <string name="home_sub_header_title">What Are You Looking For?</string>
    <string name="home_sub_header_message"><![CDATA[Discover & connect with great service providers near you.]]></string>
    <string name="write_a_review">Write a Review</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="book_now">Book Now</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="username_hint">Username or email address</string>
    <string name="password_hint">Password</string>
    <string name="login_title">Welcome Back!</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="register_login_hint">Login Username</string>
    <string name="email_hint">Email</string>
    <string name="confirm_email_hint">Confirm Email</string>
    <string name="vendor_hint">Vendor Name</string>
    <string name="vendor_warning">Important: This is the name that customers see when purchasing your products. Please choose carefully.</string>
    <string name="vendor_description_edit_title">Please describe something about your company and what you sell.</string>
    <string name="register_title">Vendor Registration Form</string>
    <string name="register_sub_title">Submit the form below to become a vendor on this store.</string>
    <string name="business_registration">Business Registration</string>
    <string name="register">Register</string>
    <string name="write_a_review_header"><![CDATA[Rate & Write a Review]]></string>
    <string name="comment">Comment</string>
    <string name="speed">Speed</string>
    <string name="quality">Quality</string>
    <string name="friendly">Friendly</string>
    <string name="price">Price</string>
    <string name="submit_review">Submit Your Review</string>
    <string name="service_name_hint">Service Name</string>
    <string name="location_hint">Location (optional)</string>
    <string name="select_region">Select Region</string>
    <string name="contact_email_hint">Contact Email</string>
    <string name="select_service_category">Select Service Category</string>
    <string name="service_tags">Service Tags (optional)</string>
    <string name="add_tags_description">Add tags such as available amenities</string>
    <string name="add_service">Add New Service</string>
    <string name="hours_of_operation">Hours of Operation (optional)</string>
    <string name="saturday">Saturday</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="cover_image">Select Cover Image (optional)</string>
    <string name="closed">Closed</string>
    <string name="image_pick_failed">Unable to select image</string>
    <string name="add_post_gallery_title">Gallery Images (optional)</string>
    <string name="empty_login">Enter login</string>
    <string name="empty_password">Enter password</string>
    <string name="logging_loading">Signing in…</string>
    <string name="hello_user_toast">Hello, %s!</string>
    <string name="log_out">Log out</string>
    <string name="description">Description</string>
    <string name="website_hint">Website (optional)</string>
    <string name="video_hint">URL to video (optional)</string>
    <string name="video_hint_below">Display a video on your service</string>
    <string name="preview">Preview</string>
    <string name="publish">Publish</string>
    <string name="phone_hint">Phone Number (optional)</string>
    <string name="empty_description">Description should not be empty</string>
    <string name="empty_name">Service name should not be empty</string>
    <string name="empty_email">Email should not be empty</string>
    <string name="available_on">Available on</string>
    <string name="saving_changes">Saving changes…</string>
    <string name="unknown_error">Unknown error. Please contact support.</string>
    <string name="service_submitted_message">Service submitted successfully. Your service will be visible once approved.</string>
    <string name="your_packages">Your Packages:</string>
    <string name="add_service_header_title">Add Service</string>
    <string name="purchase_packages">Purchase Package:</string>
    <string name="packages_title">Select a Package</string>
    <string name="limited_package_description" formatted="false">%d EGP for %d listings</string>
    <string name="unlimited_package_description" formatted="false">%d EGP for unlimited listings listed for %d days</string>
    <string name="login_required">Please sign in</string>
    <string name="select_service_region">Select service region</string>
    <string name="create_service">Create Service</string>
    <string name="publish_service">Publish Service</string>
    <string name="login_with_facebook">Login/Register with Facebook</string>
    <string name="login_with_facebook_failed">Login with facebook failed</string>
    <string name="date_ago" formatted="false">%s ago</string>
</resources>
