<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/services_menu_header_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/photographers"
                    android:checked="true"
                    android:title="@string/photographers"/>
                <item
                    android:id="@+id/makeup_artist"
                    android:title="@string/makeup_artist"/>
                <item
                    android:id="@+id/fashion"
                    android:title="@string/fashion"/>
                <item
                    android:id="@+id/accessories"
                    android:title="@string/accessories"/>
                <item
                    android:id="@+id/places"
                    android:title="@string/places"/>
            </group>
        </menu>
    </item>


</menu>