<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/service_name"
            android:hint="@string/service_name_hint"
            style="@style/loginFromEditText"/>

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/location"
            android:hint="@string/location_hint"
            style="@style/loginFromEditText"/>

        <Spinner
            android:layout_marginTop="10dp"
            android:id="@+id/region"
            android:background="@drawable/rounded_border"
            android:prompt="@string/select_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/contact_email_hint"
            style="@style/loginFromEditText"/>

        <Spinner
            android:layout_marginTop="10dp"
            android:id="@+id/category"
            android:background="@drawable/rounded_border"
            android:prompt="@string/select_service_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/greyText"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="2dp"
            android:paddingLeft="2dp"
            android:text="@string/service_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/tags"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </LinearLayout>

        <TextView
            android:textColor="@color/greyText"
            android:textSize="13sp"
            android:text="@string/add_tags_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>