<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout android:orientation="vertical"
                  android:paddingTop="30dp"
                  android:padding="20dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <TextView
            android:textSize="22sp"
            android:text="@string/write_a_review_header"
            android:textColor="@color/darkGreyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TableLayout
            android:id="@+id/rating_layout"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:stretchColumns="*"
            android:layout_height="wrap_content">

            <TableRow
                android:paddingBottom="5dp"
                >

                <TextView
                    style="@style/writeReviewRatingText"
                    android:text="@string/speed"
                    />

                <include
                    android:layout_gravity="right"
                    layout="@layout/write_review_stars"/>
            </TableRow>

            <TableRow
                android:paddingBottom="5dp"
                >

                <TextView
                    style="@style/writeReviewRatingText"
                    android:text="@string/quality"
                    />

                <include
                    android:layout_gravity="right"
                    layout="@layout/write_review_stars"/>
            </TableRow>

            <TableRow
                android:paddingBottom="5dp"
                >

                <TextView
                    style="@style/writeReviewRatingText"
                    android:text="@string/friendly"
                    />

                <include
                    android:layout_gravity="right"
                    layout="@layout/write_review_stars"/>
            </TableRow>

            <TableRow
                android:paddingBottom="5dp"
                >

                <TextView
                    style="@style/writeReviewRatingText"
                    android:text="@string/price"
                    />

                <include
                    android:layout_gravity="right"
                    layout="@layout/write_review_stars"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_marginTop="30dp"
            android:layout_marginBottom="2dp"
            android:paddingLeft="2dp"
            android:textColor="@color/greyText"
            android:text="@string/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:singleLine="false"
            android:gravity="top|left"
            android:lines="8"
            android:layout_height="wrap_content"
            android:id="@+id/comment"
            style="@style/loginFromEditText"/>

        <Button
            android:layout_marginTop="20dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:id="@+id/login_button"
            android:text="@string/submit_review"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            style="@style/contrastButton"/>
    </LinearLayout>
</ScrollView>
