<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        >

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/rect_image_placeholder"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingTop="20dp"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                >

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="4dp"
                    android:textColor="#fff"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <include layout="@layout/post_page_star"/>

                <include layout="@layout/post_page_star"/>

                <include layout="@layout/post_page_star"/>

                <include layout="@layout/post_page_star"/>

                <include layout="@layout/post_page_star"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/write_a_review_button"
                    style="@style/contrastButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/write_review_button"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/write_a_review"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/book_now"
                    style="@style/contrastButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/book_now"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/publish"
                    style="@style/contrastButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/publish"
                    android:textAllCaps="false"
                    android:visibility="gone"/>
            </LinearLayout>


        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/descriptionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_border"
        android:padding="20dp"
        android:paddingBottom="0dp">

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

    <com.utilsframework.android.view.flowlayout.FlowLayout
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_border"
        android:padding="20dp">
    </com.utilsframework.android.view.flowlayout.FlowLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_border"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/photo_gallery"
            android:textColor="@color/darkGreyText"
            android:textSize="17sp"/>

        <GridView
            android:id="@+id/photo_gallery_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="4">

        </GridView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/operation_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_border"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/available_on"
            android:textColor="@color/darkGreyText"
            android:textSize="17sp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:paddingBottom="10dp"
                android:visibility="gone"
                >

                <TextView
                    android:text="@string/saturday"
                    android:textColor="@color/greyText"
                    />

                <TextView
                    android:layout_gravity="right"
                    android:textColor="@color/greyText"
                    />
            </TableRow>

            <TableRow
                android:paddingBottom="10dp"
                android:visibility="gone"
                >

                <TextView
                    android:text="@string/sunday"
                    android:textColor="@color/greyText"
                    />

                <TextView
                    android:layout_gravity="right"
                    android:textColor="@color/greyText"
                    />
            </TableRow
                >

            <TableRow
                android:paddingBottom="10dp"
                android:visibility="gone"
                >

                <TextView
                    android:text="@string/monday"
                    android:textColor="@color/greyText"
                    />

                <TextView
                    android:layout_gravity="right"
                    android:textColor="@color/greyText"
                    />
            </TableRow>

            <TableRow
                android:paddingBottom="10dp"
                android:visibility="gone"
                >

                <TextView
                    android:text="@string/tuesday"
                    android:textColor="@color/greyText"
                    />

                <TextView
                    android:layout_gravity="right"
                    android:textColor="@color/greyText"
                    />
            </TableRow>

            <TableRow
                android:paddingBottom="10dp"
                android:visibility="gone"
                >

                <TextView
                    android:text="@string/wednesday"
                    android:textColor="@color/greyText"
                    />

                <TextView
                    android:layout_gravity="right"
                    android:textColor="@color/greyText"
                    />
            </TableRow>

            <TableRow
                android:paddingBottom="10dp"
                android:visibility="gone"
                >

                <TextView
                    android:text="@string/thursday"
                    android:textColor="@color/greyText"
                    />

                <TextView
                    android:layout_gravity="right"
                    android:textColor="@color/greyText"
                    />
            </TableRow>

            <TableRow
                android:visibility="gone"
                >

                <TextView
                    android:text="@string/friday"
                    android:textColor="@color/greyText"
                    />

                <TextView
                    android:layout_gravity="right"
                    android:textColor="@color/greyText"
                    />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>

