<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout android:orientation="vertical"
                  android:layout_marginLeft="20dp"
                  android:layout_marginRight="20dp"
                  android:layout_marginBottom="30dp"
                  android:padding="15dp"
                  android:background="@drawable/rounded_border"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <TextView
            android:id="@+id/user_name"
            android:gravity="center_vertical"
            android:text="Captumia"
            android:textSize="16sp"
            android:textColor="@color/darkGreyText"
            android:drawableLeft="@drawable/ic_edit"
            android:drawablePadding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TableLayout
            android:id="@+id/rating_layout"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:stretchColumns="*"
            android:layout_height="wrap_content">

            <TableRow
                >

                <TextView
                    android:textColor="@color/darkGreyText"
                    android:paddingLeft="5dp"
                    android:text="@string/speed"
                    />

                <TextView
                    android:textColor="@color/darkGreyText"
                    android:paddingLeft="5dp"
                    android:text="@string/quality"
                    />
            </TableRow>

            <TableRow>

                <include
                    layout="@layout/write_review_stars"/>

                <include
                    layout="@layout/write_review_stars"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:textColor="@color/darkGreyText"
                    android:paddingLeft="5dp"
                    android:text="@string/friendly"
                    />

                <TextView
                    android:textColor="@color/darkGreyText"
                    android:paddingLeft="5dp"
                    android:text="@string/price"
                    />
            </TableRow>

            <TableRow>
                <include
                    layout="@layout/write_review_stars"/>

                <include
                    layout="@layout/write_review_stars"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/message"
            android:textColor="@color/greyText"
            android:text="Norm, I love it!"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/date"
            android:textColor="@color/greyText"
            android:text="2 days ago"
            android:layout_marginTop="15dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</FrameLayout>
